--- a/src/styles/components/Tag.scss
+++ b/src/styles/components/Tag.scss
@@ -3,4 +3,9 @@
     color: $color-secondary;
     padding: 5px 10px;
     border-radius: 10px;
+
+    @media screen and (max-width: $breakpoint-small) {
+        font-size: 14px;
+        border-radius: 5px;
+    }
 }
