--- a/src/styles/pages/Housing.scss
+++ b/src/styles/pages/Housing.scss
@@ -33,7 +33,7 @@
     }
 
     @media screen and (max-width: $breakpoint-small) {
-        @include flex(column);
+        @include flex();
         align-content: flex-start;
         flex-wrap: wrap;
 
